--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 results/experiment1/qc_check_sheets/qc_permutations_raw.csv filter=lfs diff=lfs merge=lfs -text
+results/experiment2/qc_check_sheets/qc_permutations_raw.csv filter=lfs diff=lfs merge=lfs -text
